# workhorse

./: .gitignore  AGENTS.md  AI_AGENT.md  CHANGELOGS.md  Cargo.toml  README.en.md  README.md  TODO  install.md  justfile  release.md
.github/workflows/: ci.yml  release.yml
cargo-work/: Cargo.toml
cargo-work/examples/: git.rs
cargo-work/src/: exec.rs  lib.rs  logger.rs  mac.rs  main.rs  options.rs
cargo-work/src/command/: admin.rs  cargo.rs  cmd.rs  get.rs  health.rs  job.rs  just.rs  logs.rs  mod.rs  ping.rs  pull.rs  push.rs  put.rs  scp.rs  ssh.rs  test.rs  watch.rs
cargo-work/src/ssh/: build.rs  cargo.rs  cmd.rs  get.rs  just.rs  mod.rs  ping.rs  pull.rs  push.rs  scp.rs  ssh.rs  test.rs
cargo-work/src/ui/: app.rs  mod.rs
cargo-work/src/ui/tabs/: about.rs  email.rs  recipe.rs  traceroute.rs  weather.rs
docs/: agent-playbooks.md
horsed/: .gitignore  Cargo.toml  build.rs
horsed/migration/: Cargo.toml
horsed/migration/src/: lib.rs  m20250104_174457_create_user.rs  m20250106_014703_create_ssh_auth.rs  m20250125_083941_create_ssh_pk.rs  m20260307_090000_add_user_role_and_enable.rs
horsed/src/: db.rs  error.rs  git.rs  key.rs  lib.rs  mac.rs  main.rs  ui.rs
horsed/src/command/: ls.rs  mod.rs  task.rs
horsed/src/db/: mod.rs
horsed/src/db/entity/: mod.rs  prelude.rs  ssh_auth.rs  ssh_pk.rs  user.rs
horsed/src/git/: mod.rs
horsed/src/git/hooks/: mod.rs  pre-receive
horsed/src/git/repo/: mod.rs
horsed/src/ipc/: data.rs  mod.rs
horsed/src/logger/: mod.rs  otel.rs  ring.rs
horsed/src/options/: mod.rs  user.rs
horsed/src/repo/: mod.rs
horsed/src/ssh/: handle.rs  health.rs  jobs.rs  mod.rs  setup.rs  tests.rs
pony/: Cargo.toml
pony/src/: main.rs
scripts/: agent-regression-cases.json  changes.sh  check-agent-docs.py  check-agent-regression.py  get-workhorse.sh
scripts/autostart/linux/: horsed.service
scripts/autostart/macos/: local.horsed.plist
scripts/autostart/windows/: horsed.xml
skills/: index.json
skills/workhorse/: SKILL.md
skills/workhorse-artifact-sync/: SKILL.md
skills/workhorse-artifact-sync/agents/: openai.yaml
skills/workhorse-cargo-work/: SKILL.md
skills/workhorse-cargo-work/agents/: openai.yaml
skills/workhorse-horsed/: SKILL.md
skills/workhorse-horsed-dev/: SKILL.md
skills/workhorse-horsed-dev/agents/: openai.yaml
skills/workhorse-horsed-ops/: SKILL.md
skills/workhorse-horsed-ops/agents/: openai.yaml
skills/workhorse-horsed-setup/: SKILL.md
skills/workhorse-horsed-setup/agents/: openai.yaml
skills/workhorse-horsed/agents/: openai.yaml
skills/workhorse-remote-access/: SKILL.md
skills/workhorse-remote-access/agents/: openai.yaml
skills/workhorse-remote-build/: SKILL.md
skills/workhorse-remote-build/agents/: openai.yaml
skills/workhorse/agents/: openai.yaml
stable/: Cargo.toml
stable/src/: buffer.rs  data.rs  lib.rs
stable/src/data/: mod.rs
stable/src/data/v1/: mod.rs
stable/src/data/v2/: mod.rs
stable/src/task/: executor.rs  manager.rs  mod.rs  pool.rs  promise.rs  signal.rs
stable/trough/: Cargo.toml
zebra/: .gitignore  index.html  package.json
zebra/app/: Cargo.toml  tauri.conf.json
zebra/app/capabilities/: default.json
zebra/app/src/: lib.rs  main.rs
zebra/src/: App.tsx  main.tsx
