[workspace]
resolver = "2"

members = ["cargo-work", "horsed", "stable", "horsed/migration"]

[workspace.dependencies]
stable = { path = "./stable" }
migration = { path = "./horsed/migration" }
anyhow = "1.0"
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
russh = "0.49.2"
russh-keys = "0.49.2"
shell-escape = "0.1.5"
ssh-key = { version = "0.6.7", features = [
  "ed25519",
  "rsa",
  "p256",
  "p384",
  "p521",
  "encryption",
] }
ssh-encoding = { version = "0.2.0", features = ["base64", "bytes"] }
futures = "0.3.31"
tokio = { version = "1.42", features = ["full", "tracing"] }
parking_lot = "0.12.3"
once_cell = { version = "1.20.2", features = ["parking_lot"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
colored = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
cargo-options = { version = "0.7.5", features = ["serde"] }
