[workspace]
resolver = "2"

members = ["cargo-work", "horsed", "stable", "horsed/migration"]

[workspace.dependencies]
stable = { path = "./stable" }
migration = { path = "./horsed/migration" }
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
russh = "0.49.2"
shell-escape = "0.1.5"
ssh-key = { version = "0.6.7", features = [
  "ed25519",
  "rsa",
  "p256",
  "p384",
  "p521",
  "encryption",
] }
futures = "0.3.31"
tokio = { version = "1.42", features = ["full", "tracing"] }
parking_lot = "0.12.3"
once_cell = { version = "1.20.2", features = ["parking_lot"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2"
colored = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
cargo-options = { version = "0.7.5", features = ["serde", "tokio"] }
git2 = { version = "0.20", default-features = false }
paste = "1.0.15"
zerocopy = { version = "0.8", features = ["derive", "std"] }
bincode = "1.3"
tar = "0.4"
clean-path = "0.2.1"
flate2 = { version = "1.0" }
fs4 = { version = "0.12", features = ["tokio", "sync"] }
ratatui = { version = "0.30.0-alpha.1", features = ["all-widgets"] }
crossterm = { version = "0.28" }
indoc = "2.0"
itertools = "0.14"
strum = { version = "0.26", features = ["derive"] }

[patch.crates-io]
cargo-options = { git = "https://github.com/uuhan/cargo-options", rev = "c759c78" }
ratatui = { git = "https://github.com/ratatui/ratatui" }
# russh = { git = "https://github.com/uuhan/russh", branch = "workhorse" }
