[package]
name = "cargo-work"
version = "0.1.1"
edition = "2021"

[features]
default = ["use-system-ssh"]
use-system-ssh = []

[dependencies]
cargo-config2 = "0.1.31"
indicatif = "0.17.9"
url = "2.5.4"

anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
stable.workspace = true
russh.workspace = true
shell-escape.workspace = true
tokio.workspace = true
tracing.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
cargo-options.workspace = true
git2.workspace = true
paste.workspace = true
