[package]
name = "cargo-work"
version = "0.2.1"
edition = "2021"

[features]
default = []
use-system-ssh = []

[dependencies]
cargo-config2 = "0.1.31"
indicatif = "0.17.9"
url = "2.5.4"
color-eyre = "0.6.3"
palette = "0.7.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
time = "0.3.37"
unicode-width = "0.2.0"

async-trait.workspace = true
clap.workspace = true
stable.workspace = true
russh.workspace = true
shell-escape.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
cargo-options.workspace = true
git2.workspace = true
paste.workspace = true
zerocopy.workspace = true
bincode.workspace = true
tar.workspace = true
flate2.workspace = true
clean-path.workspace = true
fs4.workspace = true
indoc.workspace = true
itertools.workspace = true
ratatui.workspace = true
crossterm.workspace = true
strum.workspace = true
