[package]
name = "horsed"
version = "0.1.2"
edition = "2021"

[dependencies]
clap.workspace = true
futures.workspace = true
tokio.workspace = true
stable.workspace = true
migration.workspace = true
russh.workspace = true
russh-keys.workspace = true
ssh-key.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
anyhow.workspace = true
colored.workspace = true
serde.workspace = true
serde_json.workspace = true
cargo-options.workspace = true
tracing-appender.workspace = true
paste.workspace = true
zerocopy.workspace = true
bincode.workspace = true
tar.workspace = true
clean-path.workspace = true

interprocess = { version = "2.2.2", features = ["tokio"] }
rand_core = "0.6.4"
ratatui = "0.29.0"
sea-orm = { version = "1.1.3", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
thiserror = "2.0.9"
displaydoc = "0.2.5"
base64 = "0.22.1"
shellwords = "1.1.0"
casbin = "2.7.0"
anstyle = "1.0.2"
