[package]
name = "stable"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
futures.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
zerocopy.workspace = true
serde.workspace = true

[dev-dependencies]
bincode.workspace = true
