[package]
name = "stable"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
futures.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
zerocopy.workspace = true
serde.workspace = true

[dev-dependencies]
