[package]
name = "stable"
version = "0.2.6"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dependencies]
anyhow.workspace = true
bincode.workspace = true
crossbeam.workspace = true
futures.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
zerocopy.workspace = true
serde.workspace = true

[dev-dependencies]
rstest.workspace = true
